snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-sources.jar.sha1
7fa1c1ff49539835ffdfea1b0a24cb1b25c5764b